# onvey

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
ci/: install-dependencies.sh
cmake/: common.cmake  cotire.cmake  third-party.cmake
source/: CMakeLists.txt
source/common/: CMakeLists.txt
source/common/common/: version_info.cc  version_info.h
source/exe/: CMakeLists.txt  main.cc
source/precompiled/: precompiled.h
test/: CMakeLists.txt  main.cc
test/common/common/: version_info_test.cc
test/precompiled/: precompiled_test.h
tools/: check_format.py  gen_git_sha.sh
